Add 3D Print Studio service card with teal accent

--- a/public/studio/index.html
+++ b/public/studio/index.html
@@ -156,6 +156,17 @@
                         <li>Unlimited support</li>
                     </ul>
                 </div>
+                <div class="service-card" style="border-color: #00d4aa;">
+                    <div class="service-price" style="background: linear-gradient(135deg, #00d4aa, #00a8e8); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">Custom</div>
+                    <h3>3D Print Studio</h3>
+                    <ul>
+                        <li>Action figure & toy design</li>
+                        <li>3D modeling & sculpting</li>
+                        <li>Prototype to production (Bambu A1)</li>
+                        <li>Custom trophies & collectibles</li>
+                        <li>Limited edition drops</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
