Update branding: BabaTruNoyz to The Baba Studio, Parallax as Parent Company

--- a/public/studio/index.html
+++ b/public/studio/index.html
@@ -103,9 +103,9 @@
                 </div>
             </div>
             <div class="work-item">
-                <img src="images/baba.jpg" alt="Baba TruNoyz Logo">
+                <img src="images/baba.jpg" alt="The Baba Studio Logo">
                 <div class="work-item-content">
-                    <h3>Baba TruNoyz</h3>
+                    <h3>The Baba Studio</h3>
                     <p>Identity design for music studios and creative spaces</p>
                     <span class="tag">Logo & Identity</span>
                 </div>
